# encounters

./: .gitignore  README.md  pyproject.toml  testing_strategy.md
encounter_api/: dependencies.py  encounters.py  enums.py  fastapi_app.py  repository.py  state.py  types.py
encounter_api/routers/: encounters.py
tests/: builders.py  conftest.py  test_audit_view.py  test_auth.py  test_create_encounter.py  test_encounters.py  test_get_encounters.py  test_logging.py
